fix: whitespacing issue

--- a/less/styles.less
+++ b/less/styles.less
@@ -335,3 +335,7 @@ div.card-panel.panel div.panel-body.panel-body-with-img {
 .align-items-center {
   align-items: center;
 }
+
+p:empty {
+  display: none;
+}
